# ThinPlateSplines

./: CMakeLists.txt  README.md
cmake/: eigen-config.cmake
matlab/: tpstest.m
matlab/@ThinPlateSpline/: ThinPlateSpline.m
matlab/@ThinPlateSpline/private/: tps_energy.m  tps_eval.m  tps_fit.m  tps_free.m  tps_make.m  tps_update.m
matlab/src/: prelude.h  tps_energy.mex.c  tps_eval.mex.c  tps_fit.mex.c  tps_free.mex.c  tps_make.mex.c  tps_update.mex.c
src/: tictoc.c  tps.cc  tps.h
test/: CMakeLists.txt  main.c
